[metadata]
name = structlog-gelf
version = 0.1.0
description = structlog-aware logging handlers for Graylog
long_description = file: README.rst
license = MPL
url = http://magenta.dk
author = Magenta ApS
author_email = info@magenta.dk

classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
include_package_data = False
python_requires = >=3.5
install_requires =
    pika
    structlog
tests_requires =
    structlog

py_modules = structlog_gelf

